objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <description>Código do Produto</description>
        <displayFormat>PROD-{000}</displayFormat>
        <externalId>true</externalId>
        <label>Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Descricao__c</fullName>
        <description>Nome do Produto</description>
        <inlineHelpText>Este campo é destinado para informar algum detalhe do produto. Por exemplo.: O produto estava com promoção se levasse mais que 01?</inlineHelpText>
        <label>Descricao</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstabelecimentoId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nome do Mercadinho</description>
        <inlineHelpText>Se não encontrar o nome do Mercado, CLIQUE em MAIS para adicionar e inclua.</inlineHelpText>
        <label>Nome do Estabelecimento</label>
        <referenceTo>Estabelecimento__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <description>Marca do produto</description>
        <inlineHelpText>Marca do produto. Exemplo.: Turquesa, KI-caldo, Deline, Vale gut...</inlineHelpText>
        <label>Marca</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacao__c</fullName>
        <description>Campo Destinado para informar alguma observação do Produto</description>
        <inlineHelpText>Informação do produto</inlineHelpText>
        <label>Observacao</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantidade__c</fullName>
        <description>Quantidade do Produto</description>
        <label>Quantidade</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorTotal__c</fullName>
        <formula>ValorUnitario__c *  Quantidade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorUnitario__c</fullName>
        <label>Valor Unitario</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Marca__c</columns>
        <columns>Descricao__c</columns>
        <columns>ValorUnitario__c</columns>
        <columns>ValorTotal__c</columns>
        <columns>Quantidade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidacaoNomeProd</fullName>
        <active>true</active>
        <description>Regra de validação responsável por validar se contém espaço.</description>
        <errorConditionFormula>CONTAINS(Name, &apos; &apos;)</errorConditionFormula>
        <errorMessage>Este campo é destinado para digitar apenas o nome do produto. Caso queira especificar mais detalhes sobre o produto, escreva no campo descrição.</errorMessage>
    </validationRules>
</CustomObject>